tests/snapshots/conformance__snapshot_baked_svg_for_every_sample@dim_line.plume.snap
---
source: tests/conformance.rs
assertion_line: 27
expression: svg
input_file: samples/dim_line.plume
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-55.15 -43.6 110.3 87.2" width="110.3" height="87.2" class="plume">
  <defs/>
  <g class="plume-scene">
    <g class="plume-node plume-shape-dim plume-shape-line" data-id="dim1" transform="translate(0,0)">
      <line x1="0" y1="200" x2="300" y2="200" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="11" font-family="system-ui, -apple-system, sans-serif" fill="#666">300 mm</text>
      </g>
    </g>
  </g>
  <g class="plume-wires"/>
</svg>
