tests/snapshots/conformance__snapshot_baked_svg_for_every_sample@full_example.plume.snap
---
source: tests/conformance.rs
assertion_line: 26
expression: svg
input_file: samples/full_example.plume
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-395.9 -149.7 1374.9 921.55" width="1374.9" height="921.55" class="plume">
  <defs/>
  <g class="plume-scene">
    <g class="plume-node plume-shape-oval" data-id="outlet" transform="translate(-294.55,-50.3)">
      <ellipse cx="0" cy="0" rx="80.85" ry="24.3" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="#222">Outlet 120-240 VAC</text>
      </g>
    </g>
    <g class="plume-node plume-shape-group plume-shape-rect" data-id="rails" transform="translate(-31.175,-50.3)">
      <rect x="-141.525" y="-78.9" width="283.05" height="157.8" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,-70.6)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="#222">Power Rails</text>
      </g>
      <g class="plume-node plume-shape-group plume-shape-rect" data-id="rail48" transform="translate(0,-17)">
        <rect x="-133.875" y="-24.8" width="267.75" height="49.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
        <g class="plume-node plume-shape-text" transform="translate(-104.775,0)">
          <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="#222">48V Rail</text>
        </g>
        <g class="plume-node plume-shape-psu plume-shape-rect" data-id="drive" transform="translate(1.375,0)">
          <rect x="-66.55" y="-24.3" width="133.1" height="48.6" rx="5" ry="5" fill="white" stroke="#444" stroke-width="1"/>
          <g class="plume-node plume-shape-text" transform="translate(0,0)">
            <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="#222">Drive PSU 960W</text>
          </g>
        </g>
        <g class="plume-node plume-shape-bus plume-shape-slant" data-id="bus48" transform="translate(106.15,0)">
          <polygon points="-20.7138,-24.3 33.7362,-24.3 20.7138,24.3 -33.7362,24.3" fill="gray" stroke="#444" stroke-width="1"/>
          <g class="plume-node plume-shape-text" transform="translate(0,0)">
            <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="#222">Bus</text>
          </g>
        </g>
      </g>
      <g class="plume-node plume-shape-group plume-shape-rect" data-id="rail24" transform="translate(0,53.6)">
        <rect x="-141.025" y="-24.8" width="282.05" height="49.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
        <g class="plume-node plume-shape-text" transform="translate(-111.925,0)">
          <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="#222">24V Rail</text>
        </g>
        <g class="plume-node plume-shape-psu plume-shape-rect" data-id="ctrl" transform="translate(1.375,0)">
          <rect x="-73.7" y="-24.3" width="147.4" height="48.6" rx="5" ry="5" fill="white" stroke="#444" stroke-width="1"/>
          <g class="plume-node plume-shape-text" transform="translate(0,0)">
            <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="#222">Control PSU 240W</text>
          </g>
        </g>
        <g class="plume-node plume-shape-bus plume-shape-slant" data-id="bus24" transform="translate(113.3,0)">
          <polygon points="-20.7138,-24.3 33.7362,-24.3 20.7138,24.3 -33.7362,24.3" fill="gray" stroke="#444" stroke-width="1"/>
          <g class="plume-node plume-shape-text" transform="translate(0,0)">
            <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="#222">Bus</text>
          </g>
        </g>
      </g>
    </g>
    <g class="plume-node plume-shape-group plume-shape-rect" data-id="consumers" transform="translate(263.375,-50.3)">
      <rect x="-112.025" y="-70.3" width="224.05" height="140.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,-62)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="#222">Consumers</text>
      </g>
      <g class="plume-node plume-shape-group plume-shape-rect" data-id="booster" transform="translate(0,-12.7)">
        <rect x="-99.525" y="-20.5" width="199.05" height="41" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
        <g class="plume-node plume-shape-text" transform="translate(-74,0)">
          <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="#222">Booster</text>
        </g>
        <g class="plume-node plume-shape-alert plume-shape-circle plume-shape-oval" data-id="fuse" transform="translate(-14.975,0)">
          <ellipse cx="0" cy="0" rx="18" ry="18" fill="white" stroke="red" stroke-width="1"/>
          <g class="plume-node plume-shape-text" transform="translate(0,-36.8)">
            <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="#222">60A Fuse</text>
          </g>
          <g class="plume-node plume-shape-badge plume-shape-rect" transform="translate(0,20.3)">
            <rect x="-27.225" y="-24.3" width="54.45" height="48.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
            <g class="plume-node plume-shape-text" transform="translate(0,0)">
              <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="#222">HOT</text>
            </g>
          </g>
        </g>
        <g class="plume-node plume-shape-rect" data-id="caps" transform="translate(59.025,0)">
          <rect x="-40" y="-20" width="80" height="40" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
          <g class="plume-node plume-shape-text" transform="translate(0,0)">
            <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="#222">MOSFET + 20x Caps</text>
          </g>
        </g>
      </g>
      <g class="plume-node plume-shape-group plume-shape-rect" data-id="heaters" transform="translate(0,49.3)">
        <rect x="-111.525" y="-20.5" width="223.05" height="41" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
        <g class="plume-node plume-shape-text" transform="translate(-86,0)">
          <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="#222">Heaters</text>
        </g>
        <g class="plume-node plume-shape-rect" data-id="ssr" transform="translate(-14.975,0)">
          <rect x="-30" y="-20" width="60" height="40" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
          <g class="plume-node plume-shape-text" transform="translate(0,0)">
            <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="#222">3x SSR</text>
          </g>
        </g>
        <g class="plume-node plume-shape-rect" data-id="bands" transform="translate(71.025,0)">
          <rect x="-40" y="-20" width="80" height="40" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
          <g class="plume-node plume-shape-text" transform="translate(0,0)">
            <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="#222">6x Band Heaters</text>
          </g>
        </g>
      </g>
    </g>
    <g class="plume-node plume-shape-group plume-shape-rect" data-id="fadec" transform="translate(-294.55,99.4)">
      <rect x="-18.375" y="-29.8" width="36.75" height="59.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,-21.5)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="#222">FADEC</text>
      </g>
      <g class="plume-node plume-shape-icon" data-id="estop" transform="translate(0,13.3)">
        <rect x="-16" y="-16" width="32" height="32" fill="none" stroke="#444" stroke-width="1"/>
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="12.8" fill="#444">power_settings_new</text>
      </g>
    </g>
    <g class="plume-node plume-shape-force_diagram plume-shape-rect" data-id="fd1" transform="translate(900,700)">
      <rect x="-58.5" y="-51.35" width="117" height="102.7" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-rect" transform="translate(0,-19)">
        <rect x="-50" y="-20" width="100" height="40" rx="4" ry="4" fill="lightblue" stroke="#444" stroke-width="1"/>
      </g>
      <g class="plume-node plume-shape-line plume-style-thin" transform="translate(0,10)">
        <line x1="-50" y1="0" x2="50" y2="0" stroke="#444" stroke-width="1"/>
      </g>
      <g class="plume-node plume-shape-arrow" transform="translate(-25,19)">
        <line x1="0" y1="0" x2="50" y2="20" stroke="#444" stroke-width="1"/>
        <polygon class="plume-marker plume-marker-arrow" points="46.2861,18.5144 35.1444,19.4429 38.8583,10.1581" fill="#444"/>
      </g>
      <g class="plume-node plume-shape-text" transform="translate(0,-39.5)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="12" font-family="system-ui, -apple-system, sans-serif" fill="#222">Cavity</text>
      </g>
    </g>
  </g>
  <g class="plume-wires">
    <g class="plume-wire" data-from="outlet" data-to="caps">
      <path d="M -213.2 -50.3 L -155.025 -50.3 L -155.025 -67.3 L -96.85 -67.3" fill="none" stroke="red" stroke-width="2"/>
    </g>
    <g class="plume-wire" data-from="outlet" data-to="caps">
      <path d="M 37.25 -67.3 L 47.25 -67.3" fill="none" stroke="red" stroke-width="2"/>
    </g>
    <g class="plume-wire" data-from="outlet" data-to="caps">
      <path d="M 102.7 -67.3 L 166.3 -67.3 L 166.3 -63 L 229.9 -63" fill="none" stroke="red" stroke-width="2"/>
    </g>
    <g class="plume-wire" data-from="outlet" data-to="caps">
      <path d="M 266.9 -63 L 281.9 -63" fill="none" stroke="red" stroke-width="2"/>
      <polygon class="plume-marker plume-marker-arrow" points="277.9,-63 267.9,-58 267.9,-68" fill="red"/>
    </g>
    <g class="plume-wire" data-from="outlet" data-to="bus24">
      <path d="M -213.2 -50.3 L -158.6 -50.3 L -158.6 3.3 L -104 3.3" fill="none" stroke="#444" stroke-width="1"/>
    </g>
    <g class="plume-wire" data-from="outlet" data-to="bus24">
      <path d="M 44.4 3.3 L 54.4 3.3" fill="none" stroke="#444" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="50.4,3.3 40.4,8.3 40.4,-1.7" fill="#444"/>
    </g>
    <g class="plume-wire" data-from="bus48" data-to="bands">
      <path d="M 102.7 -67.3 L 160.3 -67.3 L 160.3 -1 L 217.9 -1" fill="none" stroke="#444" stroke-width="1"/>
    </g>
    <g class="plume-wire" data-from="bus48" data-to="bands">
      <path d="M 278.9 -1 L 293.9 -1" fill="none" stroke="#444" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="289.9,-1 279.9,4 279.9,-6" fill="#444"/>
    </g>
    <g class="plume-wire" data-from="fadec" data-to="drive">
      <path d="M -275.675 99.4 L -186.2625 99.4 L -186.2625 -67.3 L -96.85 -67.3" fill="none" stroke="#444" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="-271.675,99.4 -261.675,94.4 -261.675,104.4" fill="#444"/>
      <polygon class="plume-marker plume-marker-arrow" points="-100.85,-67.3 -110.85,-62.3 -110.85,-72.3" fill="#444"/>
      <text x="-178.5625" y="16.05" text-anchor="middle" dominant-baseline="central" font-size="11" font-family="system-ui, -apple-system, sans-serif" fill="#222">CAN</text>
    </g>
    <g class="plume-wire" data-from="estop" data-to="fuse">
      <path d="M -278.05 112.7 L -24.075 112.7 L -24.075 -63 L 229.9 -63" fill="none" stroke="orange" stroke-width="2"/>
      <circle class="plume-marker plume-marker-dot" cx="225.9" cy="-63" r="3.3333" fill="orange"/>
    </g>
  </g>
</svg>
