tests/snapshots/conformance__snapshot_baked_svg_for_every_sample@hello.plume.snap
---
source: tests/conformance.rs
assertion_line: 26
expression: svg
input_file: samples/hello.plume
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-54.875 -44.8 109.75 89.6" width="109.75" height="89.6" class="plume">
  <defs/>
  <g class="plume-scene" color="#222">
    <g class="plume-node plume-shape-rect" transform="translate(0,0)">
      <rect x="-34.375" y="-24.3" width="68.75" height="48.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="currentColor">hello</text>
      </g>
    </g>
  </g>
  <g class="plume-wires"/>
</svg>
