tests/snapshots/conformance__snapshot_baked_svg_for_every_sample@internal_wires.plume.snap
---
source: tests/conformance.rs
expression: svg
input_file: samples/internal_wires.plume
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-131.9 -100.4 263.8 200.8" width="263.8" height="200.8" class="plume">
  <defs/>
  <g class="plume-scene" color="black">
    <g class="plume-node plume-shape-room plume-shape-group plume-shape-rect" data-id="garden" transform="translate(-60.95,0)">
      <rect x="-50.45" y="-79.9" width="100.9" height="159.8" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-rect" data-id="inlet" transform="translate(0,-43.1)">
        <rect x="-34.375" y="-24.3" width="68.75" height="48.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
        <g class="plume-node plume-shape-text" transform="translate(0,0)">
          <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Inlet</text>
        </g>
      </g>
      <g class="plume-node plume-shape-rect" data-id="outlet" transform="translate(0,16.5)">
        <rect x="-37.95" y="-24.3" width="75.9" height="48.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
        <g class="plume-node plume-shape-text" transform="translate(0,0)">
          <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Outlet</text>
        </g>
      </g>
      <g class="plume-node plume-shape-text" transform="translate(0,59.6)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Garden</text>
      </g>
    </g>
    <g class="plume-node plume-shape-room plume-shape-group plume-shape-rect" data-id="kitchen" transform="translate(60.95,0)">
      <rect x="-50.45" y="-79.9" width="100.9" height="159.8" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-rect" data-id="inlet" transform="translate(0,-43.1)">
        <rect x="-34.375" y="-24.3" width="68.75" height="48.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
        <g class="plume-node plume-shape-text" transform="translate(0,0)">
          <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Inlet</text>
        </g>
      </g>
      <g class="plume-node plume-shape-rect" data-id="outlet" transform="translate(0,16.5)">
        <rect x="-37.95" y="-24.3" width="75.9" height="48.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
        <g class="plume-node plume-shape-text" transform="translate(0,0)">
          <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Outlet</text>
        </g>
      </g>
      <g class="plume-node plume-shape-text" transform="translate(0,59.6)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">Kitchen</text>
      </g>
    </g>
  </g>
  <g class="plume-wires">
    <g class="plume-wire" data-from="garden.outlet" data-to="kitchen.inlet">
      <path d="M -22.5 7.7 L 6.5 7.7 L 6.5 -34.3 L 22.075 -34.3" fill="none" stroke="#444" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="26.075,-34.3 21.075,-31.8 21.075,-36.8" fill="#444"/>
      <text x="6.5" y="-8.5875" text-anchor="middle" dominant-baseline="central" font-size="11" font-family="sans-serif" fill="currentColor" paint-order="stroke" stroke="white" stroke-width="4.4" stroke-linejoin="round">carries</text>
    </g>
    <g class="plume-wire" data-from="garden.inlet" data-to="garden.outlet">
      <path d="M -60.95 -18.3 L -60.95 -12.3" fill="none" stroke="#444" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="-60.95,-8.3 -63.45,-13.3 -58.45,-13.3" fill="#444"/>
      <text x="-60.95" y="-13.3" text-anchor="middle" dominant-baseline="central" font-size="11" font-family="sans-serif" fill="currentColor" paint-order="stroke" stroke="white" stroke-width="4.4" stroke-linejoin="round">flows</text>
    </g>
    <g class="plume-wire" data-from="kitchen.inlet" data-to="kitchen.outlet">
      <path d="M 60.95 -18.3 L 60.95 -12.3" fill="none" stroke="#444" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="60.95,-8.3 58.45,-13.3 63.45,-13.3" fill="#444"/>
      <text x="60.95" y="-13.3" text-anchor="middle" dominant-baseline="central" font-size="11" font-family="sans-serif" fill="currentColor" paint-order="stroke" stroke="white" stroke-width="4.4" stroke-linejoin="round">flows</text>
    </g>
  </g>
</svg>
